Bug 408275 - fixing a problem where breadcrumbs were wrapping at shorter browser width

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -20,7 +20,7 @@
 	display: -webkit-flex;     /* NEW - Chrome */
 	display: flex; 
 	width: calc(100% - 10px - 3px);
-	whitespace: nowrap;
+	white-space: nowrap;
 }
 
 
@@ -124,8 +124,8 @@ a.breadcrumb:hover {
 	font-size: 8pt;
 	color: #444;
 	text-decoration: none;
-	text-wrap: normal;
 	line-height: 10pt;
+	white-space:nowrap;
 }
 
 a.currentLocation:hover {
